Address potential vertical spacing issue with 'Your list' menu getting more items because of #129.

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -63,6 +63,7 @@ h1 + ul li {
   float: right;
   @include font_bold_normal($font_family);
   color: $button_text_color;
+  position: relative;
 }
 
 .list-container {
@@ -93,6 +94,8 @@ h1 + ul li {
 .list-hover {
   width: 180px;
   display: none;
+  position: absolute;
+  z-index: 1;
 }
 
 .list-outer-container:hover .list-hover {
